<resources>
    <string name="app_name">ProSafe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_places_api_key">AIzaSyD52GzAhzB7Ay723kNF6N</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_status">Hi there I am using Ping Me</string>

    //Settings
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="app_version">%s.%d</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="title_version">Version</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://chatterboxappharish.blogspot.com/2018/06/privacy-policy.html</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://chatterboxappharish.blogspot.com/2018/11/terms-and-conditions.html</string>
    <string name="my_posts">my_posts</string>
    <string name="change_address">change_address</string>
    <string name="location_title">location_title</string>
    <string name="neighbor_settings">Neighbors Settings</string>
    <string name="incident_category">INCIDENT_CATEGORY</string>

    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="neighbor_label">Neighbor</string>
    <string name="location_error_message">Error while adding the location</string>
    <string name="incident_fetch_error_message">Unable to show incidents. Please try again!</string>
    <string name="internet_connection_error_message">No Internet Connection!Please try again!</string>
    <string name="login_fail_error_message">Login failed</string>
    <string name="authentication_progress_message">Authenticating...</string>
    <string name="create_account_progress_message">Creating Account...</string>
    <string name="account_creation_success_message">Account Created successfully</string>
    <string name="account_creation_failure_message">Account creation failed</string>
    <string name="login_failure_message">Login failed!Please try again</string>
    <string name="firstname_validation_message">First name must not be empty and be at least three characters in length</string>
    <string name="lastname_validation_message">Last name must not be empty and be at least three characters in length</string>
    <string name="email_validation_message">Enter a valid email address</string>
    <string name="password_validation_message">password must be between 4 and 10 alphanumeric characters</string>
    <string name="passwords_match_validation_message">Passwords do not match</string>
    <string name="incident_category_fetch_error_message">Unable to show incident category information. Please try again!</string>
    <string name="mobile_validation_message">Enter a valid phone number</string>
    <string name="current_location_error_message">Unable to get current location</string>
    <string name="incident_post_success_message">Incident Shared Successfully</string>
    <string name="incident_post_failure_message">Something went wrong!</string>
    <string name="default_marker_name">Marker in Sydney</string>
    <string name="posts_fetch_error_message">Unable to show posts information. Please try again!</string>
    <string name="no_provider_label">providerNA</string>
    <string name="feedback_default_email_id">harishtanu007@gmail.com</string>
    <string name="email_feedback_subject">Feedback regarding Pro-Safe application</string>
    <string name="feedback_post_error">Unable to send email</string>
    <string name="location_updation_error_message">Error occured while updating the location. Please try again!</string>

    <string name="title_activity_custom_incidents">CustomIncidentsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Advanced Filters</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>